added few more apis
