# server/api/shoppingCart/index.js
@@ -7,6 +7,8 @@ var router = express.Router();
 
 router.get('/', controller.index);
 router.get('/:id', controller.show);
+router.post('/updateCart/:id', controller.update);
+router.post('/getCartItems/', controller.getCartItems);
 router.post('/', controller.create);
 router.put('/:id', controller.update);
 router.patch('/:id', controller.update);
